# ChessNeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  ref.md  t.py  threads.cpp
app/: main.cpp
chess/generation/: tables.cpp
chess/header/: chessState.h  transpositionTable.h  zobristKeys.h
chess/source/: chessState.cpp  transpositionTable.cpp
cmake/: architecture.cu
header/: convolutionLayer.h  cuLayer.h  denseLayer.h  initMatrix.h  layer.h  neural.h  optimizer.h  policyLayer.h  reluLayer.h  softmaxLayer.h  tanhLayer.h  tensor.h  valueLayer.h
program/: fens.txt  main.cpp  makefile
program/header/: chessAi.h  convolutionLayer.h  denseLayer.h  flattenLayer.h  generator.h  layer.h  matriceMath.h  mcts.h  neuralNetwork.h  normalizationLayer.h  optimizer.h  reluLayer.h  residualBlock.h  softmaxLayer.h  tanhLayer.h  tensor.cuh  tensorization.h  threadControl.h
program/source/: chessAi.cu  convolutionLayer.cu  denseLayer.cu  flattenLayer.cu  generator.cu  layer.cu  matriceMath.cu  mcts.cu  neuralNetwork.cu  normalizationLayer.cu  optimizer.cu  reluLayer.cu  residualBlock.cu  softmaxLayer.cu  tanhLayer.cu  tensorization.cu  threadControl.cu
source/: convolutionLayer.cu  denseLayer.cu  layer.cu  neural.cu  optimizer.cu  reluLayer.cu  softmaxLayer.cu  tanhLayer.cu  tensor.cpp  tensor.cu
test/: Output.txt  arch.cu  cleanOut.txt  clrChess.sh  fens.txt  main  main.cpp  makefile  outputClean.txt  test  test.cu  threads.cpp
test/header/: chessAi.h  convolutionLayer.h  denseLayer.h  flattenLayer.h  generator.h  layer.h  matriceMath.h  mcts.h  neuralNetwork.h  optimizer.h  (+9 more)
(+38 files in other folders)
